Fix Java 9 GC flags